<?xml version="1.0"?>
<package format="2">
  <name>espdrone_msgs</name>
  <version>0.0.0</version>
  <description>The espdrone_msgs package</description>
  <maintainer email="nelsenedbert@gmail.com">Nelsen Edbert Winata</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
